2025-09-20T00:51:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17873031644 # 772
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-20
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 194 261 / 195 262
* notice: next accum: outdated-unq outdated-all / unq all: 194 261 / 196 263
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-09-19]

2025-09-16T00:52:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17750928128 # 768
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-16
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 193 260 / 194 261
* notice: next accum: outdated-unq outdated-all / unq all: 194 261 / 195 262
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-26] / [2025-09-15]

2025-08-27T00:54:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17254253005 # 748
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-27
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 192 259 / 193 260
* notice: next accum: outdated-unq outdated-all / unq all: 193 260 / 194 261
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-04] / [2025-08-26]

2025-08-05T01:04:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16737865531 # 726