@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-09-20T00:51:02Z",
+  "timestamp" : "2025-09-21T00:58:14Z",
   "count_outdated" : 261,
   "uniques_outdated" : 194,
-  "count" : 263,
-  "uniques" : 196,
+  "count" : 264,
+  "uniques" : 197,
   "clones" : [
     {
       "timestamp": "2025-09-15T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2025-09-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-20T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
